test/error/OpAndFloat.fu
public static class Test
{
	public static bool Run()
	{
		float f = 5;
		return f & 1; //ERROR: Cannot convert 'float' to 'int' //ERROR: Cannot convert 'int' to 'bool'
	}
}
